# recode

./: README.md  __init__.py  recode.py  setup.cfg  setup.py
icd10_c2cdc/: __init__.py  recode.py
recode/: recode.py
tables/: 113 ICD-10 Recodes.txt  113 ICD-10 Recodes_cov.txt  130 ICD-10 Recodes.txt  130 ICD-10 Recodes_cov.txt  130 ICD-10 Recodes_csv.txt  358 ICD-10 Recodes.txt  358 ICD-10 Recodes_cov.txt
test/: test_recoder.py
tests/: test_recoder.py
