[metadata]
name = icd10-c2cdc
version = attr: icd10_c2cdc.__version__
description = Converts ICD-10 codes to CDC/NCHS Selected Causes of Death codes.
long_description = file: README.md
long_description_content_type = text/markdown
author = Gad Keidar
author_email = gadkeidar@gmail.com
url = https://github.com/gadkeidar/recode
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Text Processing :: General
license = Mozilla Public License Version 2.0
keywords = ICD-10, CDC, NCHS, death, mortality, recode
python_requires = >=3.8

[options]
packages = icd10_c2cdc
install_requires =
    anytree